# truthspelling-llm

./: .gitignore  README.md  pyproject.toml  ruff.toml  scores_gpt3.5
truthspelling/: analyze_questions.py  analyze_scores.py  classifier.py  embedding.py  finetuning.py  generate_scenario.py  test_distinguisher.py  type.py
