[tool.poetry]
name = "truthspell"
version = "0.1.0"
description = ""
authors = ["Épiphanie Gédéon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sentence-transformers = "^3.0.1"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-core = "^0.2.10"
anthropic = "^0.30.0"
trl = "^0.9.4"
datasets = "^2.20.0"
accelerate = "^0.31.0"


[tool.poetry.group.lint.dependencies]
ruff = "^0.4.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[tool.poetry.group.log.dependencies]
tensorboard = "^2.17.0"
wandb = "^0.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
